--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,9 @@ script:
     - npm run build
 
 after_success:
+    - sudo apt-get -y purge git
+    - sudo add-apt-repository -y ppa:git-core/ppa
+    - sudo apt-get update
+    - sudo apt-get -y install git
+    - git --version
     - scripts/deploy
