--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "cssnano": "3.5.2",
+    "furtive": "^2.2.3",
     "metalsmith": "^2.1.0",
     "metalsmith-postcss": "3.1.0",
+    "metalsmith-sass": "^1.3.0",
     "metalsmith-watch": "^1.0.1",
     "superstatic": "^4.0.1",
     "yargs": "^4.1.0"
