--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
     - npm run build
 
 after_success:
+    - sudo apt-get -y install tree
     - sudo apt-get -y purge git
     - sudo add-apt-repository -y ppa:git-core/ppa
     - sudo apt-get update
