--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 notifications:
     email: false
 
-sudo: required
+sudo: false
 dist: trusty
+addons:
+    apt:
+        sources:
+            - git-core
+        packages:
+            - git
+            - oracle-java8-installer
+            - tree
 
 branches:
     except:
@@ -25,14 +33,8 @@ script:
     - npm run build
 
 after_success:
-    - sudo apt-get -y install tree
-    - sudo apt-get -y purge git
-    - sudo add-apt-repository -y ppa:git-core/ppa
-    - sudo apt-get update
-    - sudo apt-get -y install git
-    - git --version
-    - sudo apt-get -y install oracle-java8-installer
     - ( cd $HOME && curl -LO "https://services.gradle.org/distributions/gradle-2.11-bin.zip" )
     - ( cd $HOME && unzip -q gradle-2.11-bin.zip && rm gradle-2.11-bin.zip )
     - export PATH=$HOME/gradle-2.11/bin:$PATH && hash -r && gradle --version
+    - git --version
     - scripts/deploy
