--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cssnano": "3.5.2",
     "furtive": "^2.2.3",
     "metalsmith": "^2.1.0",
+    "metalsmith-html-minifier": "^2.0.0",
     "metalsmith-postcss": "3.1.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-watch": "^1.0.1",
