Add JSDOM, KaTeX, and minimatch

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "autoprefixer": "^7.1.1",
     "cssnano": "^3.10.0",
     "furtive": "^2.3.0",
+    "jsdom": "^11.0.0",
+    "katex": "^0.7.1",
     "metalsmith": "^2.3.0",
     "metalsmith-html-minifier": "^2.2.0",
     "metalsmith-postcss": "^4.0.1",
     "metalsmith-sass": "^1.4.0",
     "metalsmith-watch": "^1.0.3",
+    "minimatch": "^3.0.4",
     "superstatic": "^4.1.0",
     "yargs": "^8.0.1"
   },
