--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "metalsmith-html-minifier": "^2.2.0",
     "metalsmith-postcss": "^4.0.1",
     "metalsmith-sass": "^1.5.1",
-    "metalsmith-watch": "^1.0.3",
     "minimatch": "^3.0.4",
     "superstatic": "^6.0.3",
     "yargs": "^8.0.1"
   },
   "scripts": {
-    "build": "node metalsmith.js --no-serve --no-watch",
-    "build:watch": "node metalsmith.js --serve --watch"
+    "build": "node metalsmith.js --no-serve"
   }
 }
